syntax = "proto3";

option java_multiple_files = true;
option java_package = "frc.robot";
option java_outer_classname = "VisionProto";

package vision;

service Vision {
  rpc SetMoveDirection(stream MoveDirection) returns (stream MoveDirectionResponse) {}
}

message MoveDirection {
  float forward = 1;
  float strafe = 2;
  float turn = 3;
}

message MoveDirectionResponse {

}
